fix: remove overflow style from WoSwiper container

--- a/src/components/structures/WoSwiper/woSwiper.module.css
+++ b/src/components/structures/WoSwiper/woSwiper.module.css
@@ -84,7 +84,6 @@
 
   .swiper {
     height: 100%;
-    overflow: visible;
 
     .title + & {
       margin-top: var(--ye-em-base);
